--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </script>
 </head>
 
-<body class="bg-gray-200 font-nunito-sans dark:bg-gray-900 dark:text-white duration transition">
+<body class=" font-nunito-sans bg-gray-200 dark:bg-gray-900 dark:text-white duration transition">
   <div class="min-h-screen mx-auto max-w-5xl flex flex-col" id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
